Fix sidebar width and facet overflow (#414)
* style: remove excess lines in modal header and footer

* Move manifest modal instructional text to tooltips

* increase sidebar width on $break-widescreen

* Display facet overflow on hover on term

* fix results being pushed off

* prevent white highlight on active turns on hover

* tune transitions

--- a/dcc-portal-ui/app/styles/bootstrap/_modals.scss
+++ b/dcc-portal-ui/app/styles/bootstrap/_modals.scss
@@ -78,7 +78,6 @@
 // Top section of the modal w/ title and dismiss
 .modal-header {
   padding: $modal-title-padding;
-  border-bottom: 1px solid $modal-header-border-color;
   min-height: ($modal-title-padding + $modal-title-line-height);
 }
 // Close icon
@@ -103,7 +102,6 @@
 .modal-footer {
   padding: $modal-inner-padding;
   text-align: right; // right align buttons
-  border-top: 1px solid $modal-footer-border-color;
   @include clearfix; // clear it in case folks use .pull-* classes on buttons
 
   // Properly space out buttons
